@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix examine_monster() to handle critically hit cases.
+Nicolas Weeger 2010-09-06
+
 Unit tests: correctly initialise the config dir (for experience and such).
 Nicolas Weeger 2010-09-06
 
